# main.go
@@ -6,7 +6,6 @@ import (
 	"fmt"
 	"log"
 	"net/http"
-	"os"
 	"strconv"
 	"web-scan-worker/db"
 	"web-scan-worker/src/database"
@@ -17,15 +16,22 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/joho/godotenv"
+	"github.com/rs/cors"
 	httpSwagger "github.com/swaggo/http-swagger" // http-swagger middleware
 )
+
+type severityCounts struct {
+	Low      int
+	Moderate int
+	High     int
+}
 
 // @Summary			Парсинг git-репозитория для получения уязвимостей в lock-файлах
 // @Accept			json
 // @Produce			json
 // @Param			service			query		string						true	"Наименование сервиса" Enums(github)
 // @Param			user_info		body		gitParser.UserInfo			true	"Информация о пользователе и репозитории"
-// @Success			200				object		models.VulnerabilityResults	"ok"
+// @Success			200				object		severityCounts				"ok"
 // @Failure			400
 // @Failure			404
 // @Failure			500
@@ -69,29 +75,6 @@ func parseRepo(w http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	// Логгирование
-	fmt.Println()
-	fmt.Println("Итоговый список lock-файлов:")
-	for _, file := range files {
-		fmt.Println("-", file.GetPath())
-	}
-	fmt.Println()
-
-	// Сканируем файлы на наличие уязвимостей
-	results, err := osvscanner.DoScan(files, userData)
-	if err != nil {
-		fmt.Println(err)
-		// w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	// Сохраняем информацию в БД
-	fmt.Println()
-
-	low := 0
-	moderate := 0
-	high := 0
-
 	// scan
 	scan, err := client.Scans.CreateOne(
 		db.Scans.Repoitory.Link(db.Repos.ID.Equals(userData.RepoId)),
@@ -101,116 +84,139 @@ func parseRepo(w http.ResponseWriter, req *http.Request) {
 		fmt.Println(err)
 	}
 
-	for _, source := range results.Results {
-		fmt.Println("Источник", source.Source.Path)
+	var counts severityCounts
 
-		// sources
-		src, err := client.Sources.CreateOne(
-			db.Sources.Path.Set(source.Source.Path),
-			db.Sources.Scan.Link(db.Scans.ID.Equals(scan.ID)),
-		).Exec(ctx)
+	if len(files) != 0 {
+		// Логгирование
+		fmt.Println()
+		fmt.Println("Итоговый список lock-файлов:")
+		for _, file := range files {
+			fmt.Println("-", file.GetPath())
+		}
+		fmt.Println()
 
+		// Сканируем файлы на наличие уязвимостей
+		results, err := osvscanner.DoScan(files, userData)
 		if err != nil {
 			fmt.Println(err)
+			// w.WriteHeader(http.StatusInternalServerError)
+			return
 		}
 
-		for _, pkg := range source.Packages {
-			fmt.Println("- Пакет", pkg.Package.Name)
-			// Packages
-			_, err := client.Packages.UpsertOne(
-				db.Packages.NameEcosystemVersion(
-					db.Packages.Name.Equals(pkg.Package.Name),
-					db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
-					db.Packages.Version.Equals(pkg.Package.Version),
-				),
-			).Create(
-				db.Packages.Name.Set(pkg.Package.Name),
-				db.Packages.Version.Set(pkg.Package.Version),
-				db.Packages.Ecosystem.Set(db.Ecosystem(pkg.Package.Ecosystem)),
-			).Update().Exec(ctx)
+		// Сохраняем информацию в БД
+		fmt.Println()
+
+		for _, source := range results.Results {
+			fmt.Println("Источник", source.Source.Path)
+
+			// sources
+			src, err := client.Sources.CreateOne(
+				db.Sources.Path.Set(source.Source.Path),
+				db.Sources.Scan.Link(db.Scans.ID.Equals(scan.ID)),
+			).Exec(ctx)
 
 			if err != nil {
-				fmt.Println(err.Error())
+				fmt.Println(err)
 			}
 
-			for _, severity := range pkg.Vulnerabilities {
-				fmt.Println("--- Уязвимость", severity.ID)
+			for _, pkg := range source.Packages {
+				fmt.Println("- Пакет", pkg.Package.Name)
+				// Packages
+				_, err := client.Packages.UpsertOne(
+					db.Packages.NameEcosystemVersion(
+						db.Packages.Name.Equals(pkg.Package.Name),
+						db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
+						db.Packages.Version.Equals(pkg.Package.Version),
+					),
+				).Create(
+					db.Packages.Name.Set(pkg.Package.Name),
+					db.Packages.Version.Set(pkg.Package.Version),
+					db.Packages.Ecosystem.Set(db.Ecosystem(pkg.Package.Ecosystem)),
+				).Update().Exec(ctx)
 
-				max_sev, _ := strconv.ParseFloat(pkg.Groups[0].MaxSeverity, 32)
-				sev_category := db.SeverityType(osvscanner.ParseSeverityCategory(max_sev))
-				switch sev_category {
-				case db.SeverityTypeLow:
-					{
-						low += 1
-						break
+				if err != nil {
+					fmt.Println(err.Error())
+				}
+
+				for _, severity := range pkg.Vulnerabilities {
+					fmt.Println("--- Уязвимость", severity.ID)
+
+					max_sev, _ := strconv.ParseFloat(pkg.Groups[0].MaxSeverity, 32)
+					sev_category := db.SeverityType(osvscanner.ParseSeverityCategory(max_sev))
+					switch sev_category {
+					case db.SeverityTypeLow:
+						{
+							counts.Low += 1
+							break
+						}
+					case db.SeverityTypeModerate:
+						{
+							counts.Moderate += 1
+							break
+						}
+					case db.SeverityTypeHigh:
+						{
+							counts.High += 1
+							break
+						}
 					}
-				case db.SeverityTypeModerate:
-					{
-						moderate += 1
-						break
-					}
-				case db.SeverityTypeHigh:
-					{
-						high += 1
-						break
+
+					// Severities
+					_, err := client.Severities.UpsertOne(
+						db.Severities.ID.Equals(severity.ID),
+					).Create(
+						db.Severities.ID.Set(severity.ID),
+						db.Severities.Modified.Set(severity.Modified),
+						db.Severities.Published.Set(severity.Published),
+						db.Severities.Summary.Set(severity.Summary),
+						db.Severities.Details.Set(severity.Details),
+						db.Severities.Severity.Set(sev_category),
+						db.Severities.Packages.Link(
+							db.Packages.NameEcosystemVersion(
+								db.Packages.Name.Equals(pkg.Package.Name),
+								db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
+								db.Packages.Version.Equals(pkg.Package.Version),
+							),
+						),
+						db.Severities.Aliases.Set(severity.Aliases),
+					).Update(
+						db.Severities.Modified.Set(severity.Modified),
+						db.Severities.Published.Set(severity.Published),
+						db.Severities.Aliases.Set(severity.Aliases),
+						db.Severities.Summary.Set(severity.Summary),
+						db.Severities.Details.Set(severity.Details),
+						db.Severities.Severity.Set(sev_category),
+						db.Severities.Packages.Link(
+							db.Packages.NameEcosystemVersion(
+								db.Packages.Name.Equals(pkg.Package.Name),
+								db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
+								db.Packages.Version.Equals(pkg.Package.Version),
+							),
+						),
+					).Exec(ctx)
+
+					if err != nil {
+						fmt.Println(err)
 					}
 				}
 
-				// Severities
-				_, err := client.Severities.UpsertOne(
-					db.Severities.ID.Equals(severity.ID),
-				).Create(
-					db.Severities.ID.Set(severity.ID),
-					db.Severities.Modified.Set(severity.Modified),
-					db.Severities.Published.Set(severity.Published),
-					db.Severities.Summary.Set(severity.Summary),
-					db.Severities.Details.Set(severity.Details),
-					db.Severities.Severity.Set(sev_category),
-					db.Severities.Packages.Link(
+				// PackagesInSources
+				_, err = client.PackagesInSources.CreateOne(
+					db.PackagesInSources.Packages.Link(
 						db.Packages.NameEcosystemVersion(
 							db.Packages.Name.Equals(pkg.Package.Name),
 							db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
 							db.Packages.Version.Equals(pkg.Package.Version),
 						),
 					),
-					db.Severities.Aliases.Set(severity.Aliases),
-				).Update(
-					db.Severities.Modified.Set(severity.Modified),
-					db.Severities.Published.Set(severity.Published),
-					db.Severities.Aliases.Set(severity.Aliases),
-					db.Severities.Summary.Set(severity.Summary),
-					db.Severities.Details.Set(severity.Details),
-					db.Severities.Severity.Set(sev_category),
-					db.Severities.Packages.Link(
-						db.Packages.NameEcosystemVersion(
-							db.Packages.Name.Equals(pkg.Package.Name),
-							db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
-							db.Packages.Version.Equals(pkg.Package.Version),
-						),
+					db.PackagesInSources.Sources.Link(
+						db.Sources.ID.Equals(src.ID),
 					),
 				).Exec(ctx)
 
 				if err != nil {
 					fmt.Println(err)
 				}
-			}
-
-			// PackagesInSources
-			_, err = client.PackagesInSources.CreateOne(
-				db.PackagesInSources.Packages.Link(
-					db.Packages.NameEcosystemVersion(
-						db.Packages.Name.Equals(pkg.Package.Name),
-						db.Packages.Ecosystem.Equals(db.Ecosystem(pkg.Package.Ecosystem)),
-						db.Packages.Version.Equals(pkg.Package.Version),
-					),
-				),
-				db.PackagesInSources.Sources.Link(
-					db.Sources.ID.Equals(src.ID),
-				),
-			).Exec(ctx)
-
-			if err != nil {
-				fmt.Println(err)
 			}
 		}
 	}
@@ -227,9 +233,9 @@ func parseRepo(w http.ResponseWriter, req *http.Request) {
 			scan.ID,
 		),
 	).Update(
-		db.Scans.LowSeverity.Set(low),
-		db.Scans.ModerateSeverity.Set(moderate),
-		db.Scans.HighSeverity.Set(high),
+		db.Scans.LowSeverity.Set(counts.Low),
+		db.Scans.ModerateSeverity.Set(counts.Moderate),
+		db.Scans.HighSeverity.Set(counts.High),
 	).Exec(ctx)
 
 	if err != nil {
@@ -240,15 +246,10 @@ func parseRepo(w http.ResponseWriter, req *http.Request) {
 	fmt.Println("Success!")
 	fmt.Println("==================================")
 
-	// Тестовый вывод в файл
-	b, _ := json.MarshalIndent(results, "", "  ")
-	file, _ := os.Create("./output.json")
-	file.Write(b)
-
 	// Возвращаем результат
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
-	json.NewEncoder(w).Encode(results)
+	json.NewEncoder(w).Encode(counts)
 }
 
 // @title			WebScan Worker API
@@ -278,6 +279,8 @@ func main() {
 	// Настройка API
 	r := chi.NewRouter()
 
+	handler := cors.Default().Handler(r)
+
 	r.Get("/swagger/*", httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:1323/swagger/doc.json"), //The url pointing to API definition
 	))
@@ -285,5 +288,5 @@ func main() {
 	r.Post("/parse", parseRepo)
 
 	fmt.Println("Worker started!")
-	http.ListenAndServe(":1323", r)
+	http.ListenAndServe(":1323", handler)
 }
